@@ -2589,6 +2589,7 @@ enum ASM_DEFINE
 	BITMAPFREE,
 	
 	POPARGS,
+	GAMERELOAD,
 
 	NUMCOMMANDS           //0x0185
 };
